[package]
name = "lineage_ime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "lineage_ime"

[dependencies]
windows-core = "0.59"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_Ime",
    "Win32_UI_Accessibility",
    "Win32_UI_TextServices",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_Com",
] }

[profile.release]
opt-level = "z"
lto = true
strip = "symbols"
codegen-units = 1
panic = "abort"
